Fix initial track selection in ffmpeg demuxer

Current initial track selection logic is incorrect for files with
unsupported audio/video streams. Those streams are included into
detected_a/v_track_count, but we want only the first SUPPORTED audio
and video tracks to be enabled initially.

Bug: 764330
Cq-Include-Trybots: master.tryserver.chromium.android:android_optional_gpu_tests_rel;master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel
Change-Id: Iec89964dff563ef2b9739ddb3091f03cba798824
Reviewed-on: https://chromium-review.googlesource.com/710803
Reviewed-by: Dale Curtis <dalecurtis@chromium.org>
Commit-Queue: Sergey Volk <servolk@chromium.org>
Cr-Commit-Position: refs/heads/master@{#507859}
Former-commit-id: 4c1fafef4501996b4346d75c51d0e4ce4714ea9c